# Scrabble

./: .gitignore  CMakeLists.txt  README.md  scrabble.glade
.github/workflows/: codeql-analysis.yml  msvc.yml
config/: dict.txt
src/: Board.cpp  Board.hpp  StringChecks.cpp  StringChecks.hpp  game.cpp  game.hpp  main.cpp  menu.cpp  menu.hpp  ptrie.cpp  ptrie.hpp  ptrie_edge.cpp  ptrie_edge.hpp  ptrie_node.cpp  ptrie_node.hpp  trie.cpp  trie.hpp  ui.glade  ui.glade~
src/Matiu stuff/: Game.cpp  Game.hpp  Main.cpp  Menu.hpp  SortedLetter.cpp  SortedLetter.hpp
src/ptrie/: ptrie.cpp  ptrie.hpp  ptrie_edge.cpp  ptrie_edge.hpp  ptrie_node.cpp  ptrie_node.hpp  test.cpp
src/umap/: hmap.hpp  umap.cpp  umap.hpp
